tests/declaration_files_incremental_haste_name_reducers/declaration_files_incremental_haste_name_reducers.exp
======Start off with the .js files but without the .flow file======
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ AImplementation. This type is incompatible with
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
               ^^^^^^^ boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ TestImplementation. This type is incompatible with
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                  ^^^^^^^ boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ ADefinition. This type is incompatible with
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
               ^^^^^^^ boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ TestDefinition. This type is incompatible with
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                  ^^^^^^^ boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ AImplementation. This type is incompatible with
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
               ^^^^^^^ boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ TestImplementation. This type is incompatible with
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                  ^^^^^^^ boolean


Found 2 errors


======Start off with the .js files and the .flow file======
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ ADefinition. This type is incompatible with
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
               ^^^^^^^ boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ TestDefinition. This type is incompatible with
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                  ^^^^^^^ boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ AImplementation. This type is incompatible with
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
               ^^^^^^^ boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ TestImplementation. This type is incompatible with
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                  ^^^^^^^ boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ ADefinition. This type is incompatible with
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
               ^^^^^^^ boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ TestDefinition. This type is incompatible with
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                  ^^^^^^^ boolean


Found 2 errors


======Start off without the .js files and with the .flow file======
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ ADefinition. This type is incompatible with
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
               ^^^^^^^ boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ TestDefinition. This type is incompatible with
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                  ^^^^^^^ boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ ADefinition. This type is incompatible with
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
               ^^^^^^^ boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ TestDefinition. This type is incompatible with
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                  ^^^^^^^ boolean


Found 2 errors
Error: index.js:4
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
      ^^^^^^^ ADefinition. This type is incompatible with
  4: (A.foo(): boolean); // Error: Either AImplementation ~> boolean or ADefinition ~> boolean
               ^^^^^^^ boolean

Error: index.js:7
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
      ^^^^^^^^^^ TestDefinition. This type is incompatible with
  7: (test.foo(): boolean); // Error: Either TestImplementation ~> boolean or TestDefinition ~> boolean
                  ^^^^^^^ boolean


Found 2 errors
